# mwaa-kafka-project

./: .gitignore  README.md  pyproject.toml
dags/: log_producer.py  tcp_reader.py
